<?xml version="1.0" encoding="utf-8"?>
<Button xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/buttonCell"
    android:layout_width="match_parent"
    android:layout_height="60dp" />